AbstractFactory를 자바 최신 문법에 맞게 수정